<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="40dp">

    <TextView
        android:id="@+id/nameTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nameTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/vendorTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Vendor"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameTitle" />

    <TextView
        android:id="@+id/vendor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/vendorTitle"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/versionTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Version"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vendorTitle" />

    <TextView
        android:id="@+id/version"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/versionTitle"
        app:layout_constraintTop_toBottomOf="@+id/vendor" />

    <TextView
        android:id="@+id/typeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Type"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/versionTitle" />


    <TextView
        android:id="@+id/type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/typeTitle"
        app:layout_constraintTop_toBottomOf="@+id/version" />

    <TextView
        android:id="@+id/maxRangeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/MaxRange"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/typeTitle" />

    <TextView
        android:id="@+id/maxRange"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/maxRangeTitle"
        app:layout_constraintTop_toBottomOf="@+id/type" />

    <TextView
        android:id="@+id/resolutionTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Resolution"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/maxRangeTitle" />


    <TextView
        android:id="@+id/resolution"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/resolutionTitle"
        app:layout_constraintTop_toBottomOf="@id/maxRange" />

    <TextView
        android:id="@+id/powerTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Power"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resolutionTitle" />


    <TextView
        android:id="@+id/power"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/powerTitle"
        app:layout_constraintTop_toBottomOf="@+id/resolution" />

    <TextView
        android:id="@+id/minDelayTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/MinDelay"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/powerTitle" />


    <TextView
        android:id="@+id/minDelay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/minDelayTitle"
        app:layout_constraintTop_toBottomOf="@+id/power" />

</android.support.constraint.ConstraintLayout>
